# lprnet-v1

./: .gitignore  export_model_image.py  lprnet.ipynb  lprnet.onnx  lprnet_architecture  lprnet_best.pth  m.ipynb  main.py  pyproject.toml  rename_file.py  stn_ctc_test.ipynb  stn_test.ipynb  t.ipynb  tor_train.py
lprnet_chinese/: chinese_lprnet_best.pth  lprnet.ipynb
model/: LPRNet.py
runs/lprnet/: events.out.tfevents.1758816207.xebo.2892.0
