[project]
name = "lprnet-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "netron>=8.6.5",
    "onnx>=1.19.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchview>=0.2.7",
    "torchvision>=0.23.0",
    "torchviz>=0.0.3",
]
